@@ -1,3 +1,9 @@
+2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* DocumentBufferArchiver.cs: Continue with the implementation of the
+	  Serialize method. Changed some part of the Deserialize so that
+	  extra characters are enclosed in a "ignore" Tag.
+
 2007-06-20  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* DocumentBufferArchiver.cs: Modified the main Deserialize method,
